cloud/w8/day-b/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-orchestration-task
  labels:
    app: k8s-orchestration
