cloud/w8/day-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: k8s-orchestration-task
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
